<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_constraintBottom_toBottomOf="parent"
    android:layout_constraintLeft_toLeftOf="parent"
    android:layout_constraintRight_toRightOf="parent"
    android:layout_constraintTop_toTopOf="parent" >


        <RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                    <TextView
                        android:id="@+id/game-titel"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textSize="125px"
                        android:layout_marginTop="2dp"
                        android:text="@string/game_title"
                        android:gravity="center"

                        />



                    <View
                        android:layout_gravity="center"
                        android:layout_width="150dp"
                        android:layout_height="5dp"

                        android:background="@color/colorAccent" />


                    <TextView
                        android:id="@+id/game-description"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/game_description"
                        android:gravity="center"

                        />
            </LinearLayout>


            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_marginTop="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="75dp"

                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginRight="25dp"
                        >


                        <ImageView
                            android:id="@+id/csgo-knop"
                            android:background=""
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/csgo"
                            android:onClick="knop_onClick" />

                        <TextView
                            android:id="@+id/csgo_label"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="1dp"
                            android:gravity="center"
                            android:textSize="20dp"
                            android:text="@string/game_csgo"
                            android:textColor="#000000" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >


                        <ImageView
                            android:id="@+id/dota-knop"
                            android:background=""
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/dota2"
                            android:onClick="knop_onClick" />

                        <TextView
                            android:id="@+id/dota_label"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="1dp"
                            android:gravity="center"
                            android:textSize="20dp"
                            android:text="@string/game_dota"
                            android:textColor="#000000" />

                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginRight="25dp"
                        >


                        <ImageView
                            android:id="@+id/lol-knop"
                            android:background=""
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/lol"
                            android:onClick="knop_onClick" />

                        <TextView
                            android:id="@+id/lol_label"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="1dp"
                            android:gravity="center"
                            android:textSize="17dp"
                            android:text="@string/game_lol"
                            android:textColor="#000000" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >


                        <ImageView
                            android:id="@+id/ow-knop"
                            android:background=""
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ow"
                            android:onClick="knop_onClick" />

                        <TextView
                            android:id="@+id/ow_label"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="1dp"
                            android:gravity="center"
                            android:textSize="20dp"
                            android:text="@string/game_ow"
                            android:textColor="#000000" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

</TableLayout>